<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_8dp"
        android:background="@color/rr_gray_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/common_filter_layout"
            android:layout_width="@dimen/gap_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_8dp"
            android:background="@drawable/bg_filter_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/toggle_contrast"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gap_32dp"
                android:layout_marginStart="@dimen/gap_16dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:background="@drawable/toggle_btn_selector"
                android:button="@drawable/toggle_btn_selector"
                android:textColor="@drawable/toggle_btn_selector"
                android:textOff="@string/label_contrast"
                android:textOn="@string/label_contrast"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/contrast_seek_bar"
                android:layout_width="@dimen/gap_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_4dp"
                android:layout_marginEnd="@dimen/gap_16dp"
                android:progressBackgroundTint="@color/rr_slider_empty"
                android:progressTint="@color/rr_slider_fill"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/toggle_contrast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toggle_contrast"
                app:layout_constraintTop_toTopOf="@id/toggle_contrast" />

            <ToggleButton
                android:id="@+id/toggle_brightness"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gap_32dp"
                android:layout_marginStart="@dimen/gap_16dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:background="@drawable/toggle_btn_selector"
                android:button="@drawable/toggle_btn_selector"
                android:textColor="@drawable/toggle_btn_selector"
                android:textOff="@string/label_brightness"
                android:textOn="@string/label_brightness"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_contrast" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/brightness_seek_bar"
                android:layout_width="@dimen/gap_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_4dp"
                android:layout_marginEnd="@dimen/gap_16dp"
                android:progressBackgroundTint="@color/rr_slider_empty"
                android:progressTint="@color/rr_slider_fill"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/toggle_brightness"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toggle_brightness"
                app:layout_constraintTop_toTopOf="@id/toggle_brightness" />

            <ToggleButton
                android:id="@+id/toggle_saturation"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gap_32dp"
                android:layout_marginStart="@dimen/gap_16dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:background="@drawable/toggle_btn_selector"
                android:button="@drawable/toggle_btn_selector"
                android:textColor="@drawable/toggle_btn_selector"
                android:textOff="@string/label_saturation"
                android:textOn="@string/label_saturation"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_brightness" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/saturation_seek_bar"
                android:layout_width="@dimen/gap_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_4dp"
                android:layout_marginEnd="@dimen/gap_16dp"
                android:progressBackgroundTint="@color/rr_slider_empty"
                android:progressTint="@color/rr_slider_fill"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/toggle_saturation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toggle_saturation"
                app:layout_constraintTop_toTopOf="@id/toggle_saturation" />

            <ToggleButton
                android:id="@+id/toggle_white_balance"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gap_32dp"
                android:layout_marginStart="@dimen/gap_16dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:layout_marginBottom="@dimen/gap_8dp"
                android:background="@drawable/toggle_btn_selector"
                android:button="@drawable/toggle_btn_selector"
                android:textColor="@drawable/toggle_btn_selector"
                android:textOff="@string/label_white_balance"
                android:textOn="@string/label_white_balance"
                android:textSize="@dimen/gap_10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_saturation" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/white_balance_seek_bar"
                android:layout_width="@dimen/gap_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_4dp"
                android:layout_marginEnd="@dimen/gap_16dp"
                android:progressBackgroundTint="@color/rr_slider_empty"
                android:progressTint="@color/rr_slider_fill"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/toggle_white_balance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toggle_white_balance"
                app:layout_constraintTop_toTopOf="@id/toggle_white_balance" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rgb_filter_layout"
            android:layout_width="@dimen/gap_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/gap_8dp"
            android:layout_marginTop="@dimen/gap_8dp"
            android:layout_marginBottom="@dimen/gap_128dp"
            android:background="@drawable/bg_filter_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/common_filter_layout">

            <ToggleButton
                android:id="@+id/toggle_rgb"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gap_32dp"
                android:layout_marginStart="@dimen/gap_16dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:background="@drawable/toggle_btn_selector"
                android:button="@drawable/toggle_btn_selector"
                android:textColor="@drawable/toggle_btn_selector"
                android:textOff="@string/label_rgb"
                android:textOn="@string/label_rgb"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/toggle_gary_scale"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gap_32dp"
                android:layout_marginStart="@dimen/gap_16dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:background="@drawable/toggle_btn_selector"
                android:button="@drawable/toggle_btn_selector"
                android:textColor="@drawable/toggle_btn_selector"
                android:textOff="@string/label_gray_scale"
                android:textOn="@string/label_gray_scale"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintStart_toEndOf="@id/toggle_rgb"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/rgb_selection_red"
                android:layout_width="@dimen/gap_78dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/gap_8dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:background="@drawable/bg_btn_red"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/gap_16dp"
                android:paddingVertical="@dimen/gap_2dp"
                android:text="@string/red"
                android:textColor="@color/white"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintEnd_toEndOf="@id/toggle_rgb"
                app:layout_constraintStart_toStartOf="@id/toggle_rgb"
                app:layout_constraintTop_toBottomOf="@id/toggle_rgb" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/rgb_red_seek_bar"
                android:layout_width="@dimen/gap_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_4dp"
                android:layout_marginEnd="@dimen/gap_16dp"
                android:progressBackgroundTint="@color/rr_slider_empty"
                android:progressTint="@color/rr_slider_fill"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/rgb_selection_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rgb_selection_red"
                app:layout_constraintTop_toTopOf="@id/rgb_selection_red" />

            <TextView
                android:id="@+id/rgb_selection_green"
                android:layout_width="@dimen/gap_78dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/gap_8dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:background="@drawable/bg_btn_green"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/gap_16dp"
                android:paddingVertical="@dimen/gap_2dp"
                android:text="@string/green"
                android:textColor="@color/white"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintEnd_toEndOf="@id/toggle_rgb"
                app:layout_constraintStart_toStartOf="@id/toggle_rgb"
                app:layout_constraintTop_toBottomOf="@id/rgb_selection_red" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/rgb_green_seek_bar"
                android:layout_width="@dimen/gap_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_4dp"
                android:layout_marginEnd="@dimen/gap_16dp"
                android:progressBackgroundTint="@color/rr_slider_empty"
                android:progressTint="@color/rr_slider_fill"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/rgb_selection_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rgb_selection_green"
                app:layout_constraintTop_toTopOf="@id/rgb_selection_green" />

            <TextView
                android:id="@+id/rgb_selection_blue"
                android:layout_width="@dimen/gap_78dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/gap_8dp"
                android:layout_marginTop="@dimen/gap_8dp"
                android:layout_marginBottom="@dimen/gap_8dp"
                android:background="@drawable/bg_btn_blue"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/gap_16dp"
                android:paddingVertical="@dimen/gap_2dp"
                android:text="@string/blue"
                android:textColor="@color/white"
                android:textSize="@dimen/gap_12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/toggle_rgb"
                app:layout_constraintStart_toStartOf="@id/toggle_rgb"
                app:layout_constraintTop_toBottomOf="@id/rgb_selection_green" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/rgb_blue_seek_bar"
                android:layout_width="@dimen/gap_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_4dp"
                android:layout_marginEnd="@dimen/gap_16dp"
                android:progressBackgroundTint="@color/rr_slider_empty"
                android:progressTint="@color/rr_slider_fill"
                android:thumbTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/rgb_selection_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rgb_selection_blue"
                app:layout_constraintTop_toTopOf="@id/rgb_selection_blue" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>